# PyLogs

./: LICENSE  License.txt  README.md  setup.cfg  setup.py
pylogs/: __init__.py  main.py
src/PyLogs_SsomGrap.egg-info/: PKG-INFO  SOURCES.txt
src/pylogs/: __init__.py  main.py  test.py
