[metadata]
name = PyLogs
version = 0.1.1
author = SsomGrap
author_email = ssomgrap@gmail.com
description = A logging package for your python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SsomGrap/PyLogs
project_urls =
    Bug Tracker = https://github.com/SsomGrap/PyLogs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src